Move counter to prevent collision with IME selector
Why:
* When using the UniversalLanguageSelector extension, an 'input
  tools' icon is shown under the textarea in the bottom right.
  This covers the character counter when it is displayed.
* Changing the counter to be on the other side should prevent
  this overlap.

What:
* Remove the float CSS property for the help text. This moves the
  counter to the other side and should therefore avoid the overlap.

Bug: T350419

--- a/resources/ext.reportIncident/ext.reportincident.less
+++ b/resources/ext.reportIncident/ext.reportincident.less
@@ -22,11 +22,3 @@
 .ext-reportincident__success-confirmation-message {
 	text-align: initial;
 }
-
-.ext-reportincident-dialog-step2__additional-details,
-.ext-reportincident-dialog-step2__harassment-options
-{
-	.cdx-field__help-text {
-		float: right;
-	}
-}
